--- a/asset/sass/components/facets/_facets.scss
+++ b/asset/sass/components/facets/_facets.scss
@@ -601,9 +601,8 @@
                         }
 
                         .resource-name {
-                            overflow: hidden;
-                            text-overflow: ellipsis;
-                            white-space: nowrap;
+                            white-space: normal;
+                            word-break: break-word;
                             min-width: 0;
                         }
                     }
